--- a/ASP.NET Core Interview/01. Understand the Core .NET Concepts/07. OOP/07. Abstraction Conceptual.md
+++ b/ASP.NET Core Interview/01. Understand the Core .NET Concepts/07. OOP/07. Abstraction Conceptual.md
@@ -1,186 +1,399 @@
-Here's a detailed, interview-ready response for each **Abstraction-related** question in **Question → Answer** format:
+Let's explore Abstraction, its mechanisms in C\#, and its distinction from Encapsulation.
 
----
+-----
 
-### ✅ **Question 1:**
+### What is Abstraction in OOP? How does it differ from Encapsulation?
 
-**What is Abstraction in OOP? How does it differ from Encapsulation?**
+**Abstraction in OOP:**
 
----
+Abstraction is one of the four fundamental pillars of Object-Oriented Programming (OOP), along with Encapsulation, Inheritance, and Polymorphism. It focuses on **showing only essential features of an object while hiding the complex, underlying implementation details.** It's about presenting a simplified view of something, focusing on "what it does" rather than "how it does it."
 
-### ✅ **Answer 1:**
+Think of driving a car. As a driver, you interact with the steering wheel, accelerator, and brakes. You don't need to know the intricate details of the engine, transmission, or braking system to drive the car. The car abstracts away those complexities, presenting you with a simple interface.
 
-**Abstraction** is the OOP principle of exposing only **essential features** while hiding the **implementation details**. It answers the question:
-👉 *“**What** does the object do?”*
-—not how it does it.
+In programming, abstraction allows you to design and interact with objects at a higher level of conceptual understanding, reducing complexity and making systems easier to manage, understand, and maintain.
 
-**Encapsulation**, on the other hand, is about **hiding the internal state** and protecting it via access modifiers. It focuses on *“**How** is the data protected or accessed?”*
+**How it differs from Encapsulation:**
 
-| Aspect    | Abstraction                         | Encapsulation                       |
-| --------- | ----------------------------------- | ----------------------------------- |
-| Purpose   | Hides **implementation complexity** | Hides **internal data**             |
-| Focus     | "What" an object does               | "How" an object maintains integrity |
-| Level     | Design level                        | Implementation level                |
-| Mechanism | Interfaces, abstract classes        | Access modifiers (private, public)  |
+While both Abstraction and Encapsulation deal with "hiding" information, they hide different things for different reasons:
 
----
+| Feature           | Abstraction                                                    | Encapsulation                                            |
+| :---------------- | :------------------------------------------------------------- | :------------------------------------------------------- |
+| **What it Hides** | **Implementation details / Complexity** | **Internal state / Data / Member visibility** |
+| **Purpose** | **Simplify, manage complexity, provide a clear conceptual view** | **Protect data integrity, control access, maintain invariants** |
+| **Focus** | **"What" the object does** (its public interface)               | **"How" the object does it** (its internal workings)     |
+| **Mechanism** | Abstract classes, Interfaces, abstract methods                 | Access modifiers (`public`, `private`, `protected`, `internal`) |
+| **Example** | A `RemoteControl` class abstracts the complexity of a TV.      | A `BankAccount` class encapsulates the `balance` field (made private). |
 
-### ✅ **Question 2:**
+**Analogy:**
 
-**What are the two main mechanisms to achieve Abstraction in C#?**
+Imagine a smartphone:
 
----
+  * **Abstraction:** The phone's user interface (UI) with apps, icons, and menus is an abstraction. You tap an icon to open an app, make a call, or send a message without needing to know the complex circuitry, operating system code, or network protocols working underneath. It hides the "how."
+  * **Encapsulation:** The internal components of the phone (battery, CPU, memory chips) are encapsulated within its casing. You can't directly access or modify them from the outside. The phone only exposes well-defined ways to interact with them (e.g., charging port, power button). This protects the internal state and ensures the device functions correctly.
 
-### ✅ **Answer 2:**
+In essence, **Abstraction is about hiding unnecessary details from the user/client, providing a clear contract.** **Encapsulation is about bundling data and methods that operate on that data within a single unit and restricting direct access to the data, protecting its integrity.** Abstraction often relies on encapsulation to hide the internal workings that are being abstracted.
 
-Abstraction in C# is achieved using:
+-----
 
-1. **Abstract Classes**
-2. **Interfaces**
+### What are the two main mechanisms to achieve Abstraction in C\#?
 
-Both define **contracts** for behavior, but they differ in how they allow implementation and inheritance.
+In C\#, the two primary mechanisms to achieve abstraction are:
 
----
+1.  **Abstract Classes**
+2.  **Interfaces**
 
-### ✅ **Question 3:**
+Both allow you to define contracts and hide implementation details to varying degrees, but they serve different purposes and have distinct characteristics.
 
-**Explain Abstract Classes in C#. What are their characteristics? When would you use one?**
+-----
 
----
+### Explain Abstract Classes in C\#. What are their characteristics? When would you use one?
 
-### ✅ **Answer 3:**
+**Explanation:**
 
-An **abstract class** is a class that:
+An `abstract` class is a special kind of class that cannot be instantiated directly. It serves as a blueprint for other classes. It can contain both abstract members (methods, properties) that have no implementation and must be implemented by derived concrete classes, as well as concrete members (methods, properties, fields) with full implementation.
 
-* **Cannot be instantiated** directly
-* Can contain **abstract methods** (no implementation)
-* Can also contain **concrete methods** (with implementation)
-* Can have **fields, constructors**, and **access modifiers**
-* Supports **inheritance** (only **one** abstract class can be inherited)
+**Characteristics of Abstract Classes:**
 
-**Use when:**
+1.  **Cannot be Instantiated:** You cannot create an object directly from an abstract class using `new`.
+    ```csharp
+    public abstract class Shape { }
+    // Shape s = new Shape(); // Compile-time error
+    ```
+2.  **Can Contain Abstract Members:** They can have `abstract` methods, properties, indexers, and events. An `abstract` member has a declaration but no implementation. Derived concrete classes *must* override and provide an implementation for all inherited abstract members.
+    ```csharp
+    public abstract class Shape
+    {
+        public abstract double Area(); // Abstract method - no body
+        public abstract string Name { get; set; } // Abstract property
+    }
+    ```
+3.  **Can Contain Concrete Members:** They can also have regular (non-abstract) methods, properties, fields, constructors, and events with full implementations.
+    ```csharp
+    public abstract class Shape
+    {
+        public string Color { get; set; } // Concrete property
+        public void Display() // Concrete method
+        {
+            Console.WriteLine($"This is a {Color} {Name}.");
+        }
+    }
+    ```
+4.  **Can have Constructors:** Abstract classes can have constructors. These constructors are called when an instance of a *derived class* is created, allowing the abstract base class to initialize its state.
+5.  **Can Inherit from Another Class:** An abstract class can inherit from another regular class or another abstract class.
+6.  **Cannot be Sealed:** An `abstract` class cannot be `sealed` because `sealed` prevents inheritance, which defeats the purpose of an abstract class (which is meant to be inherited).
+7.  **Derived Classes Must Implement Abstract Members:** Any concrete (non-abstract) class that inherits from an abstract class *must* provide implementations for all inherited abstract members using the `override` keyword. If a derived class is also `abstract`, it doesn't have to implement all abstract members of its base class (but its concrete descendants eventually will).
 
-* You want a **common base** for related classes
-* You need to **share code** across subclasses
-* You want to **enforce a contract** via abstract members
+**When would you use an Abstract Class?**
 
-**Example:**
+You should use an abstract class when:
 
-```csharp
-public abstract class Shape
-{
-    public abstract double CalculateArea(); // Must be overridden
-    public void Display() => Console.WriteLine("Displaying shape");
-}
-```
-
----
-
-### ✅ **Question 4:**
-
-**Explain Interfaces in C#. What are their characteristics? When would you use one?**
-
----
-
-### ✅ **Answer 4:**
-
-An **interface** in C#:
-
-* Declares **method/property/event signatures**
-* **Cannot contain fields or constructors**
-* **Cannot be instantiated**
-* A class can implement **multiple interfaces**
-* From C# 8.0, interfaces can define **default method implementations**
-
-**Use when:**
-
-* You want to define **capabilities or roles** (`IPrintable`, `IDisposable`)
-* You need **multiple inheritance of behavior**
-* Classes implementing the interface may come from **unrelated hierarchies**
+1.  **You want to provide a common base for closely related classes that share common behavior and state.** This means you want some default or common implementations along with some methods that *must* be defined by subclasses.
+      * **Example:** A `Vehicle` abstract class could have concrete methods like `StartEngine()` and `StopEngine()` that are common to all vehicles, but an `abstract` method `Drive()` that needs to be implemented differently by `Car`, `Motorcycle`, and `Truck`.
+2.  **You want to define a partial implementation for a set of classes.** You have some logic that is common and can be implemented in the base class, but other parts of the logic are specific to each derived class.
+3.  **You want to declare non-public members (e.g., `protected` fields/methods).** Interfaces can only define `public` members. Abstract classes can have `protected` or `private` members, allowing for more controlled internal structure for the inherited hierarchy.
+4.  **You need to store state (fields) common to all derived classes.** Interfaces cannot have fields (except for static read-only fields for constants in C\# 8+).
+5.  **You want to evolve the contract over time in a controlled way.** You can add new non-abstract methods to an abstract class without breaking existing derived classes (they just won't have the new method implemented unless they choose to). Adding abstract methods would break existing concrete derived classes until they implement them.
 
 **Example:**
 
 ```csharp
-public interface ILogger
+public abstract class Employee
 {
-    void Log(string message);
+    public int Id { get; set; }
+    public string Name { get; set; }
+    public decimal BaseSalary { get; set; }
+
+    // Constructor to initialize common properties
+    public Employee(int id, string name, decimal baseSalary)
+    {
+        Id = id;
+        Name = name;
+        BaseSalary = baseSalary;
+    }
+
+    // Concrete method common to all employees
+    public void DisplayInfo()
+    {
+        Console.WriteLine($"ID: {Id}, Name: {Name}");
+    }
+
+    // Abstract method: Must be implemented by derived classes
+    public abstract decimal CalculateSalary();
 }
 
-public class ConsoleLogger : ILogger
+public class FullTimeEmployee : Employee
 {
-    public void Log(string message) => Console.WriteLine(message);
+    public FullTimeEmployee(int id, string name, decimal baseSalary)
+        : base(id, name, baseSalary) { }
+
+    public override decimal CalculateSalary()
+    {
+        return BaseSalary; // For simplicity, full-time salary is base salary
+    }
+}
+
+public class Contractor : Employee
+{
+    public decimal HourlyRate { get; set; }
+    public int HoursWorked { get; set; }
+
+    public Contractor(int id, string name, decimal baseSalary, decimal hourlyRate, int hoursWorked)
+        : base(id, name, baseSalary)
+    {
+        HourlyRate = hourlyRate;
+        HoursWorked = hoursWorked;
+    }
+
+    public override decimal CalculateSalary()
+    {
+        return HourlyRate * HoursWorked;
+    }
+}
+
+// Usage
+// Employee emp1 = new Employee(1, "Generic", 50000); // ERROR: Cannot create an instance of the abstract type or interface 'Employee'
+
+FullTimeEmployee ftEmp = new FullTimeEmployee(101, "Alice", 60000);
+ftEmp.DisplayInfo();
+Console.WriteLine($"Full-time Employee Salary: {ftEmp.CalculateSalary()}");
+
+Contractor contractor = new Contractor(201, "Bob", 0, 50, 160);
+contractor.DisplayInfo();
+Console.WriteLine($"Contractor Salary: {contractor.CalculateSalary()}");
+
+// Polymorphism with abstract class
+List<Employee> employees = new List<Employee>();
+employees.Add(ftEmp);
+employees.Add(contractor);
+
+Console.WriteLine("\n--- Calculating salaries for all employees ---");
+foreach (Employee emp in employees)
+{
+    emp.DisplayInfo();
+    Console.WriteLine($"Calculated Salary: {emp.CalculateSalary()}\n");
 }
 ```
 
----
+-----
 
-### ✅ **Question 5:**
+### Explain Interfaces in C\#. What are their characteristics? When would you use one?
 
-**What are the key differences between an Abstract Class and an Interface in C#? When should you choose one over the other?**
+**Explanation:**
 
----
+An `interface` in C\# defines a **contract** for a class or a struct. It specifies a set of members (methods, properties, events, indexers) that the implementing class or struct *must* provide. An interface declares "what" a type can do, without specifying "how" it does it. It's purely a definition of behavior.
 
-### ✅ **Answer 5:**
+**Characteristics of Interfaces:**
 
-| Feature        | Abstract Class                         | Interface                                                |
-| -------------- | -------------------------------------- | -------------------------------------------------------- |
-| Instantiation  | Cannot be instantiated                 | Cannot be instantiated                                   |
-| Inheritance    | Single inheritance                     | Multiple interfaces can be implemented                   |
-| Members        | Can have fields, properties, methods   | Cannot have fields (except static from C# 8.0)           |
-| Implementation | Can have both abstract & concrete code | Traditionally no implementation (C# 8.0+ allows default) |
-| Constructors   | Yes                                    | No                                                       |
+1.  **Cannot be Instantiated:** Like abstract classes, you cannot create an object directly from an interface using `new`.
+    ```csharp
+    public interface IDisplayable { }
+    // IDisplayable d = new IDisplayable(); // Compile-time error
+    ```
+2.  **No Implementation (Traditionally):** Traditionally, interfaces could only declare members, not implement them. All members are implicitly `public` and `abstract`.
+      * **C\# 8.0 and later:** Introduced **Default Interface Methods (DIMs)**, allowing interfaces to provide a default implementation for methods. This allows for backward compatibility when adding new members to an interface without breaking existing implementers.
+3.  **No Fields (Traditionally):** Interfaces cannot declare fields (instance or static).
+      * **C\# 8.0 and later:** Can declare `static abstract` and `static virtual` members, and `static read-only` fields for constants within the interface.
+4.  **No Constructors:** Interfaces cannot have constructors.
+5.  **No Access Modifiers on Members (Traditionally):** All members declared in an interface are implicitly `public`. You cannot specify access modifiers like `private`, `protected`, `internal` for interface members.
+6.  **Can Inherit from Other Interfaces:** An interface can inherit from one or more other interfaces (this is multiple inheritance of interfaces).
+7.  **A Class Can Implement Multiple Interfaces:** A class can implement any number of interfaces. This is how C\# achieves "multiple inheritance" of behavior, without the Diamond Problem, as the implementing class provides all concrete implementations.
+8.  **Implementing Classes Must Provide Implementation:** Any concrete class or struct that implements an interface *must* provide a concrete implementation for all its members (unless using DIMs, where the default can be used, or the implementing class is abstract and leaves it to its descendants).
 
-**Choose Abstract Class when:**
+**When would you use an Interface?**
 
-* Classes are **closely related**
-* You want to share **implementation and state**
+You should use an interface when:
 
-**Choose Interface when:**
-
-* Classes may be **unrelated**
-* You want to define **capabilities**
-* You need **multiple inheritance of contract**
-
-Think of it as:
-
-* **"Is-a"** → use abstract class
-* **"Can-do"** → use interface
-
----
-
-### ✅ **Question 6:**
-
-**What is the purpose of an abstract method in C#?**
-
----
-
-### ✅ **Answer 6:**
-
-An **abstract method** is:
-
-* Declared inside an **abstract class**
-* Has **no body** (no implementation)
-* Must be **overridden** in any **non-abstract derived class**
-
-**Purpose:**
-
-* To **enforce** that derived classes **must implement** specific behavior.
-* Enables **runtime polymorphism** by defining a common interface with variable implementations.
+1.  **You want to define a contract that unrelated classes can fulfill.** Classes that share no common base class might still need to perform a common action.
+      * **Example:** `Car`, `Airplane`, and `Boat` are unrelated, but they all might need to `StartEngine()` or `StopEngine()`. An `IEngineControl` interface would be suitable.
+2.  **You want to achieve complete decoupling and maximize flexibility.** Programming to interfaces promotes loose coupling, making your system more modular and easier to test, replace components, and evolve.
+      * **Example:** A `Logger` class might implement `ILogger` interface. You can swap out a `FileLogger` for a `DatabaseLogger` or `CloudLogger` without changing the code that uses `ILogger`.
+3.  **You need to support multiple inheritance of behavior.** Since a class can implement multiple interfaces, it can acquire capabilities from various sources.
+      * **Example:** A `FlyingCar` class might implement both `ICar` and `IFlyable` interfaces.
+4.  **You want to define an API or a set of services.** Interfaces are excellent for defining public APIs or service contracts that client applications will use.
+5.  **You want to enable polymorphism across different type hierarchies.** Even if `Dog` and `Cat` don't inherit from the same `Animal` hierarchy (perhaps they are entirely different systems), if they both implement an `IMakeSound` interface, you can treat them polymorphically.
+6.  **You need to test your code effectively (Dependency Injection).** Interfaces are fundamental for dependency injection and mocking in unit testing, allowing you to substitute real implementations with test doubles.
 
 **Example:**
 
 ```csharp
-public abstract class Animal
+using System;
+using System.Collections.Generic;
+
+// Define an interface for anything that can be stored and loaded
+public interface IPersistable
 {
-    public abstract void MakeSound(); // Must be overridden
+    void Save();
+    void Load();
+    // In C# 8.0+, you could add a default method:
+    // public void LogActivity() { Console.WriteLine("Activity logged during persistence."); }
 }
 
-public class Dog : Animal
+// A class representing a customer, which can be saved/loaded
+public class Customer : IPersistable
 {
-    public override void MakeSound() => Console.WriteLine("Woof!");
+    public int CustomerId { get; set; }
+    public string Name { get; set; }
+
+    public void Save()
+    {
+        Console.WriteLine($"Customer {Name} (ID: {CustomerId}) saved to database.");
+    }
+
+    public void Load()
+    {
+        Console.WriteLine($"Customer {Name} (ID: {CustomerId}) loaded from database.");
+    }
+}
+
+// A class representing a product, which can also be saved/loaded
+public class Product : IPersistable
+{
+    public int ProductId { get; set; }
+    public string ProductName { get; set; }
+    public decimal Price { get; set; }
+
+    public void Save()
+    {
+        Console.WriteLine($"Product {ProductName} (ID: {ProductId}) saved to file system.");
+    }
+
+    public void Load()
+    {
+        Console.WriteLine($"Product {ProductName} (ID: {ProductId}) loaded from file system.");
+    }
+}
+
+public class DataManager
+{
+    // This method works with any object that implements IPersistable
+    public void ProcessPersistence(IPersistable item)
+    {
+        Console.WriteLine("--- Processing persistence ---");
+        item.Save();
+        item.Load();
+        Console.WriteLine("--- Persistence processed ---\n");
+    }
+}
+
+public class Program
+{
+    public static void Main(string[] args)
+    {
+        Customer customer1 = new Customer { CustomerId = 1, Name = "Alice" };
+        Product product1 = new Product { ProductId = 101, ProductName = "Laptop", Price = 1200.00m };
+
+        DataManager manager = new DataManager();
+
+        manager.ProcessPersistence(customer1); // Works with Customer
+        manager.ProcessPersistence(product1);  // Works with Product
+    }
 }
 ```
 
----
+-----
 
-Let me know if you'd like follow-up real-world scenarios or design questions next.
+### What are the key differences between an Abstract Class and an Interface in C\#? When should you choose one over the other?
+
+This is a very common interview question\!
+
+| Feature               | Abstract Class                                         | Interface                                                    |
+| :-------------------- | :----------------------------------------------------- | :----------------------------------------------------------- |
+| **Instantiation** | Cannot be instantiated directly (`new AbstractClass()`) | Cannot be instantiated directly (`new IInterface()`)         |
+| **Implementation** | Can have both concrete (implemented) and abstract (unimplemented) members. | **Traditionally:** Only abstract (unimplemented) members. \<br\>**C\# 8.0+:** Can have default implementations for methods (DIMs). |
+| **Fields** | Can have fields (instance and static)                  | **Traditionally:** Cannot have fields. \<br\>**C\# 8.0+:** Can have `static read-only` fields (constants). |
+| **Constructors** | Can have constructors                                  | Cannot have constructors                                     |
+| **Access Modifiers** | Can have `public`, `protected`, `private`, `internal` members. | All members are implicitly `public` (traditionally). \<br\>**C\# 8.0+:** Can use `private` on DIMs. |
+| **Inheritance/Implementation** | A class can inherit from **only one** abstract class. | A class can implement **multiple** interfaces.               |
+| **Base Class** | Can have a base class (inherit from another class/abstract class). | Cannot have a base class (only inherit from other interfaces). |
+| **Purpose** | Defines a "is-a" relationship, representing a partial implementation or a common base for closely related types. | Defines a "can-do" or "has-a-contract" relationship, defining a set of behaviors for unrelated types. |
+| **Versioning** | Adding new non-abstract methods usually doesn't break existing derived classes. Adding new abstract methods breaks them. | Adding new members to existing interfaces breaks all implementing classes (unless using DIMs in C\# 8.0+). |
+
+**When to Choose One Over the Other:**
+
+**Choose an Abstract Class when:**
+
+  * **You want to provide a common base for a group of closely related classes.** They share significant common behavior and state, and you want to reuse that code.
+  * **You need to define common implementation details (non-abstract methods/properties) that all derived classes will inherit.**
+  * **You want to share code among several closely related classes.**
+  * **You need to declare non-public (e.g., `protected`) members that derived classes can access but external code cannot.**
+  * **You need to store common state (fields) for derived classes.**
+  * **You are defining a component that needs to include default functionality that derived classes can optionally override.**
+
+**Choose an Interface when:**
+
+  * **You want to define a contract for behavior that can be implemented by completely unrelated classes.**
+  * **You need to support multiple inheritance of behavior.** A class needs to acquire capabilities from different "roles" or "contracts."
+  * **You want to achieve maximum flexibility and loose coupling in your design.** This is crucial for testability (mocking) and extensibility.
+  * **You are designing an API or a framework where you want to expose a set of capabilities without dictating the implementation details.**
+  * **You need to define a common set of methods for objects that belong to different inheritance hierarchies.**
+
+**Rule of Thumb:**
+
+  * **"Is-a" relationship (strong identity, shared core implementation):** Use an **Abstract Class**. (e.g., `Dog` *is an* `Animal`)
+  * **"Can-do" / "Has-a-capability" relationship (shared behavior, diverse implementations):** Use an **Interface**. (e.g., `Dog` *can* `Walk`, `Swim`, `Bark`)
+
+-----
+
+### What is the purpose of an abstract method in C\#?
+
+The purpose of an `abstract` method in C\# is to:
+
+1.  **Define a Contract for Behavior:** It specifies that a derived concrete class *must* provide an implementation for this method. It declares "what" needs to be done, but not "how" it's done.
+
+2.  **Enforce Implementation by Derived Classes:** By declaring a method as `abstract` in an abstract class (or an interface), you are essentially forcing all concrete derived classes (or implementing classes) to provide their own specific implementation for that method. If a concrete class fails to implement all inherited abstract members, it will result in a compile-time error.
+
+3.  **Achieve Runtime Polymorphism:** Abstract methods are central to runtime polymorphism. When you call an abstract method (or an interface method) through a base class (or interface) reference, the actual implementation that gets executed is determined at runtime based on the specific type of the object.
+
+4.  **Promote Abstraction:** It allows you to focus on the high-level design and the common operations that objects should support, while deferring the specific details of those operations to the concrete derived classes. This hides implementation complexity.
+
+**Characteristics of an Abstract Method:**
+
+  * It has no method body (no `{ }` block). It ends with a semicolon.
+  * It must be declared within an `abstract` class (or an interface, where all non-default methods are implicitly abstract).
+  * It cannot be `static` or `private`.
+  * Derived concrete classes must implement it using the `override` keyword.
+
+**Example:**
+
+```csharp
+public abstract class Drawing
+{
+    // Abstract method: Every derived drawing must know how to draw itself
+    public abstract void Draw();
+
+    // Concrete method: Common functionality
+    public void Resize(int scale)
+    {
+        Console.WriteLine($"Resizing drawing by {scale}x.");
+    }
+}
+
+public class Circle : Drawing
+{
+    public override void Draw() // Must implement Draw()
+    {
+        Console.WriteLine("Drawing a circle with specific dimensions.");
+    }
+}
+
+public class Square : Drawing
+{
+    public override void Draw() // Must implement Draw()
+    {
+        Console.WriteLine("Drawing a square with specific dimensions.");
+    }
+}
+
+// Usage
+// Drawing d = new Drawing(); // ERROR: Cannot instantiate abstract class
+
+Circle circle = new Circle();
+circle.Draw(); // Calls Circle's Draw()
+circle.Resize(2);
+
+Square square = new Square();
+square.Draw(); // Calls Square's Draw()
+square.Resize(3);
+```
+
+Here, `Draw()` is an `abstract` method in `Drawing`. This means any class that inherits from `Drawing` and is *not* also `abstract` *must* provide its own `Draw()` implementation. This ensures that any `Drawing` object (regardless of whether it's a `Circle` or `Square`) can respond to the `Draw()` command, but in its own specific way.
